# NcnnDotNet

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE.txt  NcnnDotNet.sln  README.md
benchmark/BenchCNN/: .gitignore  DataReaderFromEmpty.cs  GlobalGpuInstance.cs  Program.cs  README.md  getParam.bat  getParam.sh
docker/: BuildDevel.ps1  build_runtime.ps1
examples/: WindowsDeployBinary.ps1
examples/DotNetFramework/YoloV3/: .gitignore  Program.cs  YoloV3.csproj  YoloV3.sln  packages.config
examples/FasterRCNN/: .gitignore  FasterRCNN.csproj  Object.cs  Program.cs  README.md
examples/MobileNetSSD/: .gitignore  MobileNetSSD.csproj  Object.cs  Program.cs  README.md
examples/MobileNetV2SSDLite/: .gitignore  Program.cs  README.md
examples/MobileNetV3SSDLite/: .gitignore  MobileNetV3SSDLite.csproj  Object.cs  Program.cs  README.md
examples/PeleeNetSSDSeg/: .gitignore  Object.cs  PeleeNetSSDSeg.csproj  Program.cs  README.md
examples/RFCN/: .gitignore  Object.cs  Program.cs  README.md  RFCN.csproj
examples/RetinaFace/: .gitignore  FaceObject.cs  Program.cs  README.md
examples/SCRFD/: .gitignore  FaceObject.cs  Program.cs  README.md  SCRFD .csproj
examples/ShuffleNetV2/: .gitignore  Program.cs  README.md  ShuffleNetV2.csproj
examples/SimplePose/: .gitignore  KeyPoint.cs  Program.cs  README.md  SimplePose.csproj
examples/SqueezeNet/: .gitignore  Program.cs  README.md  SqueezeNet.csproj  goldfish.ppm
examples/SqueezeNetSSD/: .gitignore  Object.cs  Program.cs  README.md  SqueezeNetSSD.csproj
examples/Xamarin/Xamarin.Native.Nuget/: README.md  YoloV3.sln
examples/Xamarin/YoloV3/: .gitignore  README.md  YoloV3.sln  editorconfig
examples/YoloV2/: .gitignore  Object.cs  Program.cs  README.md
examples/YoloV3/: Object.cs  Program.cs  README.md  YoloV3.csproj
examples/YoloV5/: .gitignore  Object.cs  Program.cs  YoloV5.csproj
examples/YoloV7/: .gitignore  Object.cs  Program.cs  README.md  YoloV7.csproj
examples/YoloX/: .gitignore  GridAndStride.cs  Object.cs  Program.cs  README.md
nuget/: BuildAndroid.ps1  BuildCentOS7.ps1  BuildIOS.ps1  BuildNuspec.Pre.bat  BuildOSX.ps1  BuildUbuntu16.ps1  BuildUniversalWindowsPlatform.ps1  BuildUtils.ps1  BuildWindows.ps1  CreateAllPackage.ps1  CreatePackage.ps1  ExtractNupkgToArtifacts.ps1  Makefile  Publish.ps1  RunBuildContainer.ps1  RunTestContainer.ps1  TestPackage.ps1  TestPackageCentOS7.ps1  TestPackageOSX.ps1  TestPackageUbuntu16.ps1  TestPackageUbuntu16.ps1.bak  TestPackageUbuntu18.ps1  TestPackageWindows.ps1
nuget/nuspec/: NcnnDotNet.CPU.nuspec  NcnnDotNet.Extensions.Drawing.nuspec  NcnnDotNet.GPU.nuspec  NcnnDotNet.Xamarin.nuspec
src/NCNNDotNet.Native/: Build.bat  CMakeLists.txt  version-cuda.rc.in  version.rc.in
src/NCNNDotNet.Native/ncnn/: config.h.in  shared.h
src/NCNNDotNet.Native/ncnn/gpu/: gpu.h
src/NCNNDotNet.Native/ncnn/mat/: mat.cpp  mat.h
src/NCNNDotNet.Native/ncnn/net/: extractor.cpp  extractor.h
src/NCNNDotNet.Native/ncnn/opencv/: mat.h  opencv.cpp  opencv.h  scalar.h  size.h
src/NcnnDotNet/: AssemblyInfo.cs  DelegateHandler.cs  Ncnn.cs  NcnnDotNet.csproj  NcnnException.cs  NcnnObject.cs  global.json
src/NcnnDotNet.Extensions.Drawing/: NcnnDotNet.Extensions.Drawing.csproj
src/NcnnDotNet.Extensions.Drawing/Extensions/: Drawing.cs  DrawingExtensions.cs
src/NcnnDotNet.Native/: .gitignore  Build.ps1  BuildNative.bat  CMakeLists.txt  CleanOnlyNative.sh  version-vulkan.rc.in  version.rc.in
src/NcnnDotNet.Native/ncnn/: auxiliary.cxx  auxiliary.h  config.h.in  shared.h
src/NcnnDotNet.Native/ncnn/allocator/: allocator.cpp  allocator.h
src/NcnnDotNet.Native/ncnn/benchmark/: benchmark.cpp  benchmark.h
src/NcnnDotNet.Native/ncnn/c/: c_api.cxx  c_api.h
src/NcnnDotNet.Native/ncnn/command/: Command.h  VkCompute.cxx  VkCompute.h  VkTransfer.cxx  VkTransfer.h
src/NcnnDotNet.Native/ncnn/cpu/: cpu.h
src/NcnnDotNet.Native/ncnn/cstd/: string.h
src/NcnnDotNet.Native/ncnn/datareader/: datareader.cpp  datareader.cxx  datareader.h
src/NcnnDotNet.Native/ncnn/gpu/: GpuInfo.cpp  GpuInfo.h  VulkanDevice.cxx  VulkanDevice.h  gpu.h
src/NcnnDotNet.Native/ncnn/layer/: CustomLayer.cpp  CustomLayer.cxx  CustomLayer.h  layer.cpp  layer.h
src/NcnnDotNet.Native/ncnn/layer/layers/: AbsVal.h  ArgMax.h  BNLL.h  BatchNorm.h  Bias.h  BinaryOp.h  Cast.h  Clip.h  Concat.h  Convolution.h  Convolution1D.h  Convolution3D.h  ConvolutionDepthWise.h  ConvolutionDepthWise1D.h  ConvolutionDepthWise3D.h  Crop.h  Deconvolution.h  Deconvolution1D.h  Deconvolution3D.h  DeconvolutionDepthWise.h  DeconvolutionDepthWise1D.h  DeconvolutionDepthWise3D.h  DeepCopy.h  DeformableConv2D.h  Dequantize.h  DetectionOutput.h  Dropout.h  ELU.h  Einsum.h  Eltwise.h  Embed.h  Exp.h  ExpandDims.h  Flatten.h  Fold.h  GELU.h  GLU.h  GRU.h  Gemm.h  GridSample.h  (+61 more)
src/NcnnDotNet.Native/ncnn/mat/: VkMat.cxx  VkMat.h  mat.h
src/NcnnDotNet.Native/ncnn/mat_pixel/: mat_pixel.cpp  mat_pixel.h
src/NcnnDotNet.Native/ncnn/modelbin/: modelbin.cpp  modelbin.h
src/NcnnDotNet.Native/ncnn/net/: extractor.h  net.h
src/NcnnDotNet.Native/ncnn/opencv/: mat.h  opencv.h  point.h  rect.cxx  rect.h  scalar.cpp  size.cxx
src/NcnnDotNet.Native/ncnn/option/: option.cxx  option.h
src/NcnnDotNet.Native/ncnn/paramdict/: paramdict.cpp  paramdict.h
src/NcnnDotNet.Native/ncnn/stdlib/: stdvector.h  string.h
src/NcnnDotNet.Native/ncnn/tests/: _prng.cxx  _prng.h
src/NcnnDotNet/Allocator/: Allocator.cs  PoolAllocator.cs  UnlockedPoolAllocator.cs  VkAllocator.cs  VkBlobAllocator.cs  VkBlobBufferAllocator.cs  VkStagingAllocator.cs  VkStagingBufferAllocator.cs  (+4 more)
src/toolchains/: aarch64-linux-gnu.toolchain.cmake  arm64e-ios.cmake
tests/NcnnDotNet.Extensions.Drawing.Tests/: NcnnDotNet.Extensions.Drawing.Tests.csproj  TestBase.cs
tests/NcnnDotNet.Native.DotNetFramework.Tests/: NcnnDotNet.Native.DotNetFramework.Tests.sln
tests/NcnnDotNet.Native.Tests/: NcnnDotNet.Native.Tests.csproj  Program.cs
tests/NcnnDotNet.Tests/: NcnnDotNet.Tests.csproj  TestBase.cs  symlink-vulkan.bat  symlink.bat
work/NcnnDotNet.Native.Tests/: NcnnDotNet.Native.Tests.csproj
(+518 files in other folders)
